# cargo

TEST/: Cargo.toml  client.py  server.py
TEST/src/: main.rs
src/cargo/ops/: registry.rs
tests/testsuite/: login.rs
